<resources>
    <string name="app_name">FoodEmissions</string>
    <string name="str_btn_scan">Scan receipt</string>
    <string name="str_btn_next">Next</string>
    <string name="str_btn_prev">Previous</string>
    <string name="antal_text_field">Antal:</string>
    <string name="loes_toggle_text">Løs</string>
    <string name="oeko_toggle_text">Øko</string>
    <string name="oprindelsesland_btn_text">Land:</string>
    <string name="du_har_koebt">Du har købt</string>
    <string name="dette_har_udledt">Dette har udledt</string>
    <string name="du_har_udledt">Du har udledt</string>
    <string name="dette_kan_reduceres_med"> Dette kan reduceres med </string>
    <string name="til_en_udledning_paa"> Til en udledning på </string>
    <string name="alternativer"> Alternativer </string>
    <string name="choose_product_text"> Produkt: </string>
    <string name="play_button"> Spil "Over eller Under" </string>
    <string name="game_no_products_text"> Scan en kvittering for at bruge appen </string>
    <string name="game_disabled_text"> Scan en kvittering for at spille "Over eller Under" </string>
    <string name="game_text"> Spil for at finde ud af hvad ? gemmer! </string>
    <string name="show_button"> Vis tal </string>
    <string name="dit_co2_aftryk_er"> Dit CO<sub><small>2</small></sub> aftryk er </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>